--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ a {
   text-decoration: none;
 }
 
+*{
+  box-sizing:border-box;
+}
+
 header{
 	height:90px;
 	width:100%;
@@ -30,7 +34,7 @@ header{
 }
 
 .container{
-	width:1170px;
+	width:100%;
 	margin:0 auto;
 }
 
@@ -38,6 +42,11 @@ header{
 	width:125px;
 	float: left;
 	padding-top:17px;
+  padding-left: 15px;
+}
+
+.header-right{
+  margin-right:15px;
 }
 
 .header-right a{
@@ -58,12 +67,12 @@ header{
 }
 
 .top-wrapper{
-	height:500px;
+	height:800px;
 	background-image:url("../images/ph-event01-2016-01-01-large.jpg");
 	background-size: cover;
 	text-align: center;
 	padding-top:200px;
-	padding-bottom: 0px;
+	padding-bottom: 200px;
 }
 
 .top-wrapper h1{
@@ -106,13 +115,13 @@ header{
 	padding-top:30px;
 	padding-bottom: 30px;
 	background-color: #878686;
-	height:600px;
 }
 
 .heading{
-	display: inline-block;
+	display: block;
 	background-color: #212121;
-	width:100%;
+  margin: 0 auto;
+	width:1170px;
 	height:300px;
 	position:relative;
 }
@@ -134,6 +143,7 @@ header{
 	left:80px;
 	font-size: 25px;
 	letter-spacing: 5px;
+  text-align: left;
 }
 
 .heading .tet-contents{
@@ -144,51 +154,65 @@ header{
 	letter-spacing: 5px;
 }
 
-.business{
-	margin:30px;
+.business-btn ul{
+  display:flex;
+  flex-wrap: wrap;
+  text-align: center;
+  margin:10px 10px;
+}
+
+.business li{
+  flex:auto;
+  width:40%;
+  margin:10px 10px;
+  opacity: 0.8;
+  height:150px;
+  line-height: 150px;
+  border-radius: 15px;
+  transition: all 0.2s;
+}
+
+.business li:hover{
+  margin: 2px 2px;
+}
+
+.business li:active{
+  margin: 7px 7px;
 }
 
 .business a{
-	float:left;
-	display: inline-block;
-	width:450px;
-	text-align: center;
-	color: white;
-	margin:20px 50px;
-	font-family: serif;
-	font-size: 30px;
+  color: white;
+  font-family: serif;
+  font-size: 25px;
+  display: block;
+}
+
+.btn2{
+  opacity: 0.2;
+}
+
+.btn2:hover{
+  opacity: 0.4;
 }
 
 .tenzikai{
-	background-color: #E49192;
-	width:30%;
-	height: 80px;
-	border-radius: 50px;
-	line-height: 80px;
+  background-color: red;
+  transition: all 0.2s;
 }
 
 .ibento{
-	background-color: #56AD50;
-	width:30%;
-	height: 80px;
-	border-radius: 50px;
-	line-height: 80px;
+  background-color: green;
+  transition: all 0.2s;
 }
 
 .syogyosisetsu{
-	background-color: #7276E4;
-	width:30%;
-	height: 80px;
-	border-radius: 50px;
-	line-height: 80px;
+  background-color: blue;
+  transition: all 0.2s;
 }
 
 .bunkasisetsu{
-	background-color: #E1A143;
-	width:30%;
-	height: 80px;
-	border-radius: 50px;
-	line-height: 80px;
+  background-color: orange;
+  transition: all 0.2s;
 }
 
 .form-wrapper{
@@ -236,14 +260,77 @@ footer p{
 	font-weight: normal;
 }
 
-#bg-video{
-  max-width: 100%;
-  min-height:100%;
-  background-size: cover;
-  width:auto;
-  height:auto;
+.video-wrapper{
+  position:relative;
+  background-color: lightgray;
 }
 
 .video{
-  width: 100%;
+  height: 650px;
+  font-size:0;
+  display:block;
+  opacity: 0.5;
+  margin:0 auto;
+}
+
+.video-menu{
+  position:absolute;
+  top:40px;
+  bottom: 20px;
+  width:100%;
+  text-align: center;
+}
+
+.menu-contents{
+  color:white;
+  font-family: serif;
+  font-size: 50px;
+  font-weight: bold;
+  letter-spacing: 5px;
+  text-shadow: 2px 2px rgba(0,0,0,0.7);
+  padding:30px 0;
+  display:block;
+  transition:all 0.2s;
+}
+
+.menu-contents:hover{
+  font-size:65px;
+  color:#00A8BF;
+}
+
+/*   ここからメディアクアリ   */
+
+/*  タブレット用レスポンシブ  */
+@media(max-width:1170px){
+
+  .heading{
+    width:100%;
+  }
+
+  .video{
+    height:400px;
+  }
+
+  .menu-contents{
+    font-size: 25px;
+    padding:20px 0;
+  }
+
+  .menu-contents:hover{
+    font-size: 40px;
+  }
+
+}
+
+/*  スマホ用レスポンシブ  */
+@media(max-width:800px){
+
+  .btn{
+    width:100%;
+  }
+
+  .creative{
+    margin-bottom: 10px;
+  }
+
 }
