--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ header{
 	height:800px;
 	background-image:url("../images/ph-event01-2016-01-01-large.jpg");
 	background-size: cover;
+	background-position:center top;
 	text-align: center;
 	padding-top:200px;
 	padding-bottom: 200px;
